up msvc-specification
